<resources>
    <string name="series_number_prefixes" translatable="false">(#|number|num|num.|no|no.|nr|nr.|book|bk|bk.|volume|vol|vol.|tome|part|pt.|)</string>
    <string name="a_bracket_b_bracket">%1$s (%2$s)</string>
    <string name="a_comma_b">%1$s, %2$s</string>
    <string name="name_colon_value">%1$s: %2$s</string>
    <string name="x_of_y">%1$d of %2$d</string>
    <string name="preferred_language_x">%1$s (%2$s)</string>
    <string name="debug_subject">Gathered debugging information</string>
    <string name="debug_body">Please take the time to briefly describe the problem you are experiencing.</string>
    <string name="acra_resDialogTitle">BookCatalogue Crash</string>
    <string name="acra_resDialogText">
        It looks like BookCatalogue has crashed. If possible describe anything you think may be
        relevant below and press "OK" to send us an email about the crash.
        You will see the email before it is sent.
    </string>
    <string name="acra_resToastText">
        BookCatalogue has crashed unexpectedly. Please help us to make the application
        better by reporting this crash.
    </string>
    <string name="acra_resNotifTickerText">BookCatalogue has crashed</string>
    <string name="acra_resNotifTitle">BookCatalogue Crash</string>
    <string name="acra_resNotifText">Please click here for details</string>
    <string name="acra_resDialogCommentPrompt">Your comments (or just leave blank):</string>
    <string name="acra_resDialogOkToast">Thank you!</string>
    <string name="vldt_unable_to_get_value">Unable to get value for \'%s\'</string>
    <string name="vldt_integer_expected">Expected an integer value for \'%s\'</string>
    <string name="vldt_real_expected">Expected a real number for \'%s\'</string>
    <string name="vldt_date_expected">Expected a date for \'%s\'</string>
    <string name="vldt_boolean_expected">Expected a boolean value (0,1,t,f,true,false) for \'%s\'</string>
    <string name="vldt_non_blank_required">Non-empty value required for \'%s\'</string>
    <string name="vldt_blank_required">Empty value required for \'%s\'</string>
    <string name="vldt_failed">Validation failed for \'%s\'</string>
    <string name="vldt_read_start_after_end">The date reading started is after the end date</string>
    <string name="error_unexpected_error">An unexpected error has occurred, please send the details to support using the \'Help\' option from the main menu</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="error_if_the_problem_persists">If the problem persists, contact support via Help on the main menu.</string>
    <string name="error_search_failed">Searching for the book failed. Please check your network settings.</string>
    <string name="error_search_exception">Search failed while %1$s: %2$s</string>
    <string name="error_column_is_blank">Column %1$s is blank at row %2$s</string>
    <string name="error_columns_are_blank">Columns %1$s are all blank at row %2$d</string>
    <string name="error_automatic_toc_population_failed">Automatic Population of Titles Failed</string>
    <string name="error_no_internet_connection">Internet connection is not available.</string>
    <string name="error_import_failed">Import failed.</string>
    <string name="error_storage_not_readable">Please check that the SD Card is accessible.</string>
    <string name="error_storage_not_writable">Please check that the SD Card is writable, and has sufficient space.</string>
    <string name="info_no_books_yet">There are no books on this Bookshelf. Please add some using the menu at the bottom of this screen.</string>
    <string name="info_no_bookshelves_yet">You have not created any bookshelves yet. Please add some using the menu at the bottom of this screen.</string>
    <string name="info_no_authors_yet">There are no authors for this Book. Please add some using the text area and button at the top of this screen.</string>
    <string name="info_no_series_yet">There are no series for this Book. You can add some using the text area and button at the top of this screen.</string>
    <string name="info_cleanup_files_text">
        Purgeable files currently use %s on the SD card. Log files and other data are saved
        on the SD card at each upgrade, when you backup the database, or when the application
        crashes. Click the button below to purge these files from your SD card. If you have
        been experiencing crashing or other errors, please consider using the
        \'Send Information\' button first.
    </string>
    <string name="info_option_not_available_until_book_saved">This option is not available until the book is saved</string>
    <string name="info_click_on_thumb">Click on a thumbnail to display a larger image</string>
    <string name="info_manage_fields">Selected fields are visible in the add/edit book screens. Unselected fields are hidden.</string>
    <string name="info_select_fields_to_update">Selected fields will be updated from the internet. Unselected fields will remain unchanged.</string>
    <string name="info_install_scanner">
        To scan your books via the ISBN barcode, you must install
        one of the Zxing or pic2shop barcode scanner applications.
    </string>
    <string name="warning_import_be_cautious">
        Warning. Importing data may update existing book records with new information if the
        uuid column is not present and the id in the import file is the same as an existing id.
        This is usually fine if you changed a field in an exported file. If you created a new
        book record, or are importing someone else\'s books, ensure the uuid field is present
        or the id field is blank.
    </string>
    <string name="warning_book_not_found">
        The book was not found. You can sometimes find the correct barcode on the inside front cover.
        Otherwise please enter the details manually.
    </string>
    <string name="warning_immediate_global_changes">NOTE: All saved changes apply instantly and globally</string>
    <string name="warning_really_delete_series">
        Really delete series \'%s\'?\n\nThe books themselves will not be deleted.
        \n\nConsider editing the series and changing the series name to that of another series
        to preserve this data
    </string>
    <string name="warning_really_delete_book">
        This will completely delete the book entitled \'%1$s\' by %2$s.
        Are you sure you wish to proceed?
    </string>
    <string name="warning_select_min_1_field">Select at least one field to update</string>
    <string name="warning_editions_require_isbn">Retrieving other editions requires an ISBN</string>
    <string name="warning_duplicate_book_message">
        The book you are trying to add already exists in the database,
        are you sure you want to add another copy?
    </string>
    <string name="warning_cannot_edit_system">You cannot edit the system values</string>
    <string name="warning_cannot_delete_1st_bs">Cannot Delete the 1st Bookshelf</string>
    <string name="warning_required_title">Title must be specified</string>
    <string name="warning_required_author_long">At least one author must be specified</string>
    <string name="warning_required_author">Author field is blank</string>
    <string name="warning_required_series">Series field is blank</string>
    <string name="lt_info">
        This application is enhanced by using LibraryThing as a source of information about
        book series, as well as a source of alternate covers. To use these features you need
        to register with LibraryThing (free) and request a LibraryThing developer key (also free).
    </string>
    <string name="lt_register_text">Register with LibraryThing</string>
    <string name="lt_dev_key_text">Request LibraryThing developer key</string>
    <string name="lt_got_key">
        Once you have the developer key (or if you already have one), just enter it below
        and it will be used to get extra data.
    </string>
    <string name="lt_developer_key">Developer Key</string>
    <string name="lt_reset_messages_info">
        From time to time this application can display optional messages regarding LibraryThing.
        Press the button below to reset any of these messages that have been disabled.
    </string>
    <string name="gr_auth_blurb_part1">
        Goodreads is a web site whose stated mission is "to help people find and share books they love".
    	They have an extensive database of books and reviews, and if you are a registered Goodreads user,
    	BookCatalogue can export your books, shelves and reviews to Goodreads and import your books,
    	shelves and reviews from Goodreads. BookCatalogue is a stand-alone application and does not
    	require Goodreads, but if you are interested you can register at:
    </string>
    <string name="gr_auth_blurb_part2">
        Once you are registered, or if you are already a Goodreads user, you can authorize BookCatalogue
    	access your Goodreads data by pressing the button below. It will take you to a web page
    	where you will need to login to Goodreads and authorize this application. We will never see
    	your password, and you can disable access via the Goodreads website. Due to the vagaries of
    	the web, you may end up on a blank web page. Just click the back button to return here!
    </string>
    <string name="gr_auth_blurb_part3">
        But remember…there is no need to do any of this: BookCatalogue works just fine without it!
    </string>
    <string name="gr_auth_blurb_part4">
        It looks like you have already authorized this app. If you would like to delete the
        credentials from this phone, then you can do so by pressing the button below. But it is also
        important to de-authorize the application at the Goodreads website as well.
        \n
        \nForgetting the credentials here will remove the Goodreads option from the main application menu.
    </string>
    <string name="gr_title_auth_access">Authorize Access</string>
    <string name="gr_btn_forget_credentials">Forget Credentials</string>
    <string name="user_interface">User Interface</string>
    <string name="user_interface_open_book_read_only">Open book in read-only mode</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="thumbnails_default_crop_frame_is_whole_image">Default crop frame is whole image</string>
    <string name="thumbnails_use_external_image_cropper">Use external image cropper</string>
    <string name="scanning">Scanning</string>
    <string name="scanning_beep_if_isbn_valid">Beep if scanned ISBN is valid</string>
    <string name="scanning_beep_if_isbn_invalid">Beep if scanned ISBN is invalid</string>
    <string name="help">Help</string>
    <string name="menu_edit_booklist_styles">Edit book list styles</string>
    <string name="menu_edit_bookshelves">Manage Bookshelves…</string>
    <string name="menu_search">Search…</string>
    <string name="menu_administration">Admin</string>
    <string name="menu_about">About</string>
    <string name="btn_confirm_save">Save</string>
    <string name="btn_confirm_add">Add</string>
    <string name="btn_reset">Reset</string>
    <string name="lbl_publisher">Publisher</string>
    <string name="lbl_format">Format</string>
    <string name="lbl_cover">Cover</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_bookshelves">Shelves</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_toc_same_author">All stories in this anthology are written by the same author</string>
    <string name="lbl_read">Read</string>
    <string name="user_interface_theme">Interface Theme</string>
    <string name="lbl_first_publication">First Publication</string>
</resources>