<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/nav_manage_bookshelves"
        android:icon="@drawable/ic_library_books"
        android:title="@string/menu_edit_bookshelves" />

    <item
        android:id="@+id/nav_edit_list_styles"
        android:icon="@drawable/ic_details"
        android:title="@string/menu_edit_booklist_styles" />

    <item
        android:id="@+id/nav_admin"
        android:icon="@drawable/ic_build"
        android:title="@string/menu_administration" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/lbl_settings" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_outline"
        android:menuCategory="secondary"
        android:orderInCategory="1"
        android:title="@string/help" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_outline"
        android:menuCategory="secondary"
        android:orderInCategory="3"
        android:title="@string/lbl_about" />
</menu>