<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".searches.librarything.LibraryThingAdminActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border"
            android:orientation="vertical"
            >

            <TextView
                style="@style/txt_blurb_medium"
                android:text="@string/lt_info"
                />

            <TextView
                android:id="@+id/register_url"
                style="@style/link_url"
                android:layout_gravity="center_horizontal"
                android:text="@string/lt_register_text"
                />

            <TextView
                android:id="@+id/dev_key_url"
                style="@style/link_url"
                android:layout_gravity="center_horizontal"
                android:text="@string/lt_dev_key_text"
                />

            <TextView
                style="@style/txt_blurb_medium"
                android:text="@string/lt_got_key"
                />

            <!-- no style used on purpose -->
            <EditText
                android:id="@+id/dev_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lt_developer_key"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill"
                />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_confirm_save"
                />

            <TextView
                style="@style/txt_blurb_medium"
                android:text="@string/lt_reset_messages_info"
                />

            <Button
                android:id="@+id/reset_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_reset"
                />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>
