<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/BLB_ROW_DETAILS"
    style="@style/BooklistBook.Row"
    >

    <ImageView
        android:id="@+id/coverImage"
        style="@style/CoverImage"
        android:layout_width="0dp"
        android:contentDescription="@string/lbl_cover"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="360dp"
        tools:layout_width="240dp"
        tools:src="@drawable/ic_image"
        />

    <TextView
        android:id="@+id/series_num_long"
        style="@style/BooklistBook.BookInfo.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coverImage"
        tools:ignore="SelectableText"
        tools:text="series_num_long"
        />

    <TextView
        android:id="@+id/series_num"
        style="@style/BooklistBook.BookInfo.Secondary"
        android:layout_width="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SelectableText"
        tools:text="###"
        />

    <TextView
        android:id="@+id/title"
        style="@style/BooklistBook.BookInfo.Title"
        app:layout_constraintEnd_toStartOf="@id/read"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/series_num"
        app:layout_constraintTop_toBottomOf="@id/series_num_long"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_title"
        />

    <CheckBox
        android:id="@+id/read"
        style="@style/Flag"
        android:contentDescription="@string/lbl_read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintBaseline_toBaselineOf="@id/title"
        tools:checked="true"
        />

    <TextView
        android:id="@+id/author"
        style="@style/BooklistBook.BookInfo.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_author"
        />

    <TextView
        android:id="@+id/publisher"
        style="@style/BooklistBook.BookInfo.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_publisher"
        />

    <TextView
        android:id="@+id/isbn"
        style="@style/BooklistBook.BookInfo.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publisher"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_isbn"
        />

    <TextView
        android:id="@+id/format"
        style="@style/BooklistBook.BookInfo.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isbn"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_format"
        />

    <TextView
        android:id="@+id/shelves"
        style="@style/BooklistBook.BookInfo.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/format"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_bookshelves"
        />

    <TextView
        android:id="@+id/location"
        style="@style/BooklistBook.BookInfo.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shelves"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_location"
        />

</androidx.constraintlayout.widget.ConstraintLayout>