<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tlv="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_border"
    android:paddingEnd="@dimen/padding_border">

    <CheckBox
        android:id="@+id/same_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:text="@string/lbl_toc_same_author" />

    <AutoCompleteTextView
        android:id="@+id/add_author"
        style="@style/personalNameTextEntry"
        android:layout_below="@id/same_author"
        android:hint="@string/lbl_author" />

    <EditText
        android:id="@+id/add_title"
        style="@style/titleTextEntry"
        android:layout_below="@id/add_author"
        android:hint="@string/lbl_title"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/add_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_title"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/add_button"
        android:hint="@string/lbl_first_publication"
        android:inputType="number"
        android:maxLength="4"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_title"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_confirm_add" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/add_button"
        android:layout_alignParentBottom="true"
        android:fillViewport="true">

        <view
            android:id="@android:id/list"
            class="com.eleybourn.bookcatalogue.widgets.TouchListView"
            style="@style/tlv_TouchListView"
            tlv:grabber="@+id/grabber"
            tlv:normal_height="64dip"
            tlv:remove_mode="none" />
    </ScrollView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_button"
        android:textIsSelectable="false"
        android:textSize="16sp" />

</RelativeLayout>
