<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/inc_appbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border1"
            android:orientation="vertical"
            >

            <TextView
                style="@style/Blurb"
                android:layout_width="match_parent"
                android:text="@string/gr_auth_blurb_part1"
                />

            <TextView
                android:id="@+id/goodreads_url"
                style="@style/Url"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/border2"
                tools:ignore="SelectableText"
                tools:text="Goodreads url here"
                />

            <TextView
                style="@style/Blurb"
                android:layout_width="match_parent"
                android:text="@string/gr_auth_blurb_part2"
                />

            <Button
                android:id="@+id/authorize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/border2"
                android:text="@string/gr_title_auth_access"
                />

            <TextView
                style="@style/Blurb"
                android:layout_width="match_parent"
                android:text="@string/gr_auth_blurb_part3"
                />

            <TextView
                android:id="@+id/forget_blurb"
                style="@style/Blurb"
                android:layout_width="match_parent"
                android:text="@string/gr_auth_blurb_part4"
                />

            <Button
                android:id="@+id/btn_forget_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/border2"
                android:text="@string/gr_btn_delete_credentials"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
