<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/coverImage"
        style="@style/CoverImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/lbl_cover"
        tools:src="@drawable/ic_image"
        />

    <TextView
        android:id="@+id/title"
        style="@style/TextDetail"
        android:layout_marginStart="@dimen/indent1"
        app:layout_constraintStart_toEndOf="@id/coverImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_title"
        />

    <TextView
        android:id="@+id/author"
        style="@style/TextDetail"
        android:layout_marginStart="@dimen/indent2"
        app:layout_constraintStart_toEndOf="@id/coverImage"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="SelectableText"
        tools:text="@string/lbl_author"
        />

</androidx.constraintlayout.widget.ConstraintLayout>