<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/dialogFrame"
    >

    <AutoCompleteTextView
        android:id="@+id/author"
        style="@style/personalNameTextEntry"
        android:hint="@string/lbl_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/title"
        style="@style/titleTextEntry"
        android:hint="@string/lbl_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:ignore="Autofill"
        />

    <EditText
        android:id="@+id/first_publication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_first_publication"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="Autofill"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
